Added true parallelism in cruncher, and better testing suite.

--- a/crunch/Makefile
+++ b/crunch/Makefile
@@ -1,9 +1,12 @@
 
-CPPFLAGS=-Wall -O3 -g -lgmp -pthread -std=c++0x
+CPPFLAGS=-Wall -g -lgmp -pthread -std=c++0x
 
 all: cruncher
 
 cruncher: cruncher.o Makefile
+	g++ $(CPPFLAGS) -o $@ $<
+
+simple_test: simple_test.o Makefile
 	g++ $(CPPFLAGS) -o $@ $<
 
 .PHONY: clean
